--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Colors | Drew Wadsworth</title>
 		<link rel="stylesheet" type="text/css" href="main.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=PT+Mono" rel="stylesheet">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32"/>
 	</head>
 	<body>
